# google-meet-rec-mover

./: .gitignore  LICENSE  README.md  credentials.json.gpg  install.sh  pyproject.toml
google_meet_rec_mover/: __init__.py  cli.py  gdoc_converter.py
